Voice and tone: icon change

--- a/index.html
+++ b/index.html
@@ -1432,22 +1432,22 @@ select {
           
         <div class="w3-row-padding" style="padding: 0px 0px !important;">
         <div class="w3-half" style="padding: 0px 5px 0px 5px;!important;">
-            <p style="margin-bottom: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 30px 50px; font-size: 17px"><img src="img/hug.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="50px">&nbsp;&nbsp;&nbsp;<strong>Hopeful</strong></p>
+            <p style="margin-bottom: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 20px 25px; font-size: 17px"><img src="img/Icons/Icon_worldwide.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="70px">&nbsp;&nbsp;&nbsp;<strong>Hopeful</strong></p>
         </div>
             <div class="w3-half" style="padding: 0px 5px 0px 5px;!important;">
-            <p style="margin-bottom: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 30px 50px; font-size: 17px">
-                <img src="img/Credible.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="35px">&nbsp;&nbsp;&nbsp;<strong>Credible</strong>
+            <p style="margin-bottom: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 20px 25px; font-size: 17px">
+                <img src="img/Icons/Icon_balance.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="70px">&nbsp;&nbsp;&nbsp;<strong>Credible</strong>
           </p>
         </div>
         </div>
         
                 <div class="w3-row-padding" style="padding: 0px 0px !important;">
         <div class="w3-half" style="padding: 0px 5px 0px 5px;!important;">
-            <p style="margin-top: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 30px 50px; font-size: 17px"><img src="img/Approachable.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="40px">&nbsp;&nbsp;&nbsp;<strong>Approachable</strong></p>
+            <p style="margin-top: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 20px 25px; font-size: 17px"><img src="img/Icons/Icon_engage.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="70px">&nbsp;&nbsp;&nbsp;<strong>Approachable</strong></p>
         </div>
             <div class="w3-half" style="padding: 0px 5px 0px 5px;!important;">
-            <p style="margin-top: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 30px 50px; font-size: 17px">
-                <img src="img/Innovative.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="40px">&nbsp;&nbsp;&nbsp;<strong>Innovative</strong>
+            <p style="margin-top: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 20px 25px; font-size: 17px">
+                <img src="img/Icons/Icon_meaningful.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="70px">&nbsp;&nbsp;&nbsp;<strong>Innovative</strong>
           </p>
         </div>
         </div>        
