--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ mark {
 <body>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-dark w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-bar-block">
   <img class="w3-padding-64" src="img/badge-transparent.png" style="width: 80%;" alt="Change.org Foundation">
