sidebar color + take away header illustration

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@ mark {
     <span class="symbol symbol-twitter symbol-xxl symbol-compact"></span>-->
 </div>
     <div class="w3-half" style="text-align: center;">
-  <img src="img/UnboxingDoodle.png" style="width: 80%; opacity: 1!important;cursor: auto !important; padding-top: 15px" alt="">
+  <img src="" style="width: 80%; opacity: 1!important;cursor: auto !important; padding-top: 15px" alt="">
 </div>
   </div>
     </div>
