--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@ mark {
     <div class="w3-container">
 <div class="w3-container" style="border-radius: 10px; background-color: #fff; margin-top: 30px !important; border: 1px solid #DBD9DB">
 <div class="w3-half">
-    <h1 class="w3-jumbo" style="padding: 10% 5% 1%;"><b>Building the Foundation brand.</b></h1><p style="padding: 1% 5% 10%;">These guidelines provide you with everything you need to create materials for the Change.org Foundation brand.</p>
+    <h1 class="w3-jumbo" style="padding: 10% 5% 1%;"><b>Change.org Foundation's Brand Guidelines.</b></h1><p style="padding: 1% 5% 10%;">These guidelines provide you with everything you need to create materials for the Change.org Foundation brand.</p>
 <!--    <span class="symbol symbol-facebook symbol-xxl symbol-compact"></span>
     <span class="symbol symbol-linked-in-alt symbol-xxl symbol-compact"></span>
     <span class="symbol symbol-twitter symbol-xxl symbol-compact"></span>-->
