--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ mark {
 <hr class="section-divider">
       
 <!--    <hr style="width:50px;border:5px solid red" class="w3-round">-->
-  <h5 style="font-size: 14px">What is the Foundation</h5>
+  <h5 style="font-size: 14px">What is the Foundation?</h5>
     <blockquote><p>The Change.org Foundation is a global non-profit operating in a diverse set of countries with very different realities, spanning Latin America, Asia, Europe, and soon, Africa. </p> 
     <p>
     In many of these countries, democracy is broken -- people in power are not accountable to the people whose lives they impact. We want there to be a world where decision-making spaces are open, so that people can fully participate in holding the powerful to account.</p>
