adding gif to header

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ mark {
     <span class="symbol symbol-twitter symbol-xxl symbol-compact"></span>-->
 </div>
     <div class="w3-half" style="text-align: center;">
-  <img src="" style="width: 80%; opacity: 1!important;cursor: auto !important; padding-top: 15px" alt="">
+  <img src="img/header-animation.gif" style="width: 60%; opacity: 1!important;cursor: auto !important; padding-top: 15px; padding-bottom: 15px" alt="">
 </div>
   </div>
     </div>
