changing link on header button

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ mark {
     <span class="symbol symbol-twitter symbol-xxl symbol-compact"></span>-->
 </div>
     <div class="w3-half" style="text-align: center;">
-  <img src="img/header-animation.gif" style="width: 60%; opacity: 1!important;cursor: auto !important; padding-top: 15px; padding-bottom: 15px" alt="">
+  <img src="img/header-animation.gif" style="width: 60%; opacity: 1!important;cursor: auto !important; padding-top: 15px" alt="">
 </div>
   </div>
     </div>
@@ -669,7 +669,7 @@ mark {
         </div>
   </div>
   <div class="w3-col m4">
-        <div class="header-card" onclick="window.open('https://changeguru.org/lab/');">
+        <div class="header-card" onclick="window.open('https://changefoundation.org');">
         <div>
          <p style="font-size: 20px; line-height: 22px; font-weight: 600; color: #363135">Foundation site</p>
          <p style="font-size: 14px; line-height: 25px; font-weight: 400; color: #363135">Meet the tools and solutions you need to achieve the impact you envision.</p>
