Fix image path url for logos

--- a/index.html
+++ b/index.html
@@ -293,78 +293,78 @@
 
 <div class="w3-container container-icons">
         <div class="filterDiv filterDiv-logo global">
-    <a href="img/logo/Foundation.zip" download="logos.zip">
-        <img src="/img/logo/Foundation/logo-fdn.png" style="width:70%" alt=""> 
+    <a href="img/logo/Foundation.zip" download="FDN-logos.zip">
+        <img src="img/Logo/Foundation/logo-fdn.png" style="width:70%" alt=""> 
     </a>
   </div>
                 <div class="filterDiv filterDiv-logo global">
-        <a href="img/logo/Regional/Africa.zip" download="logos.zip">
-        <img src="img/logo/Regional/Africa/logo-africa.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Regional/Africa.zip" download="AFRICA-logos.zip">
+        <img src="img/Logo/Regional/Africa/logo-africa.png" style="width:70%; " alt=""> 
     </a>
     </div>  
     <div class="filterDiv filterDiv-logo global asia">
-        <a href="img/logo/Regional/Asia.zip" download="logos.zip">
-        <img src="img/logo/Regional/Asia/logo-asia.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Regional/Asia.zip" download="ASIA-logos.zip">
+        <img src="img/Logo/Regional/Asia/logo-asia.png" style="width:70%; " alt=""> 
     </a>
     </div>  
     <div class="filterDiv filterDiv-logo global latam">
-        <a href="img/logo/Regional/LatAm.zip" download="logos.zip">
-        <img src="img/logo/Regional/LatAm/logo-latam.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Regional/LatAm.zip" download="LATAM-logos.zip">
+        <img src="img/Logo/Regional/LatAm/logo-latam.png" style="width:70%; " alt=""> 
     </a>
     </div> 
         <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Argentina.zip" download="logos.zip">
-        <img src="img/logo/Argentina/logo-argentina.png" style="width:70%" alt=""> 
+        <a href="img/logo/Argentina.zip" download="AR-logos.zip">
+        <img src="img/Logo/Argentina/logo-argentina.png" style="width:70%" alt=""> 
     </a>
     </div>
         <div class="filterDiv filterDiv-logo latam">    
-      <a href="img/logo/Brazil.zip" download="logos.zip">
-        <img src="img/logo/Brazil/logo-brazil.png" style="width:70%" alt=""> 
+      <a href="img/logo/Brazil.zip" download="BR-logos.zip">
+        <img src="img/Logo/Brazil/logo-brazil.png" style="width:70%" alt=""> 
     </a>
     </div>
         <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Chile.zip" download="logos.zip">
-        <img src="img/logo/Chile/logo-chile.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Chile.zip" download="CL-logos.zip">
+        <img src="img/Logo/Chile/logo-chile.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Colombia.zip" download="logos.zip">
-        <img src="img/logo/Colombia/logo-colombia.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Colombia.zip" download="CO-logos.zip">
+        <img src="img/Logo/Colombia/logo-colombia.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo europe">
-        <a href="img/logo/Germany.zip" download="logos.zip">
-        <img src="img/logo/Germany/logo-germany.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Germany.zip" download="DE-logos.zip">
+        <img src="img/Logo/Germany/logo-germany.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/India.zip" download="logos.zip">
-        <img src="img/logo/India/logo-india.png" style="width:70%; " alt=""> 
+        <a href="img/logo/India.zip" download="IN-logos.zip">
+        <img src="img/Logo/India/logo-india.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/Indonesia.zip" download="logos.zip">
-        <img src="img/logo/Indonesia/logo-indonesia.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Indonesia.zip" download="ID-logos.zip">
+        <img src="img/Logo/Indonesia/logo-indonesia.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/Japan.zip" download="logos.zip">
-        <img src="img/logo/Japan/logo-japan.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Japan.zip" download="JP-logos.zip">
+        <img src="img/Logo/Japan/logo-japan.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Mexico.zip" download="logos.zip">
-        <img src="img/logo/Mexico/logo-mexico.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Mexico.zip" download="MX-logos.zip">
+        <img src="img/Logo/Mexico/logo-mexico.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/Thailand.zip" download="logos.zip">
-        <img src="img/logo/Thailand/logo-thailand.png" style="width:70%; " alt=""> 
+        <a href="img/logo/Thailand.zip" download="TH-logos.zip">
+        <img src="img/Logo/Thailand/logo-thailand.png" style="width:70%; " alt=""> 
     </a>
     </div>  
             <div class="filterDiv filterDiv-logo europe">
-        <a href="img/logo/Turkey.zip" download="logos.zip">
-        <img src="img/logo/Turkey/logo-turkey.png" style="width:70%; " alt=""> 
+        <a href="img/Logo/Turkey.zip" download="TR-logos.zip">
+        <img src="img/Logo/Turkey/logo-turkey.png" style="width:70%; " alt=""> 
     </a>
     </div>   
 </div>
