--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ the Change.org Public Benefit Corporation to incubate and accelerate citizen-led
       </div>
     <div class="w3-outline" style="margin-top: 40px;">
     <div class="w3-container" style="padding: 10px 30px;">
-    <span class="badge-primary" style="margin-top: 20px;">Elevator speech</span>
+    <span class="badge-primary" style="margin-top: 20px;">Elevator Pitch</span>
     <strong>
      <p style="margin-top: 10px; line-height: 30px">The Change.org Foundation is a global non-profit servicing almost 120 million users in 11 countries, mostly in the Global South. We leverage the global Change.org platform, the largest platform for social change, to support highly localized programs, develop analytics intelligence, technology and training to catalyse citizen leadership and collective action on issues they want to create change.
     </p>
