--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <title>Change.org Foundation Guidelines</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta property="og:title" content="Change.org Foundation's Brand Guidelines" />
+<meta property="og:description" content="These guidelines provide you with everything you need to create materials for the Change.org Foundation brand." />
+<meta property="og:image" content="https://hotsites-wordpress.s3.amazonaws.com/uploads/2019/02/Copy-of-IMG_0814-295x166.jpg" />
+
 <link rel="icon" type="image/png" href="//static.change.org/favicon/favicon-32x32.png">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
