--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta property="og:title" content="Change.org Foundation's Brand Guidelines" />
 <meta property="og:description" content="These guidelines provide you with everything you need to create materials for the Change.org Foundation brand." />
-<meta property="og:image" content="https://changefoundation.github.io/fdn-brand-identity/img/header-animation.gif" />
+<meta property="og:image" content="https://changefoundation.github.io/fdn-brand-identity/img/header-animation.gif" src="img/header-animation.gif" />
 
 <link rel="icon" type="image/png" href="//static.change.org/favicon/favicon-32x32.png">
 <link rel="stylesheet" type="text/css" href="style.css">
