--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ across a multitude of categories.
 
 <div class="w3-container container-icons">
         <div class="filterDiv filterDiv-logo global">
-    <a href="img/logo/Foundation.zip" download="FDN-logos.zip">
+    <a href="img/Logo/Foundation.zip" download="FDN-logos.zip">
         <img class="logo-size" src="img/Logo/Foundation/logo-fdn.png"  alt="">
     </a>
   </div>
