FIX in logo filles names to download.

--- a/index.html
+++ b/index.html
@@ -325,67 +325,67 @@ across a multitude of categories.
     </a>
   </div>
                 <div class="filterDiv filterDiv-logo global">
-        <a href="img/logo/Regional/Africa.zip" download="AFRICA-logos.zip">
+        <a href="img/Logo/Regional/Africa.zip" download="AFRICA-logos.zip">
         <img class="logo-size" src="img/Logo/Regional/Africa/logo-africa.png"  alt="">
     </a>
     </div>
     <div class="filterDiv filterDiv-logo global asia">
-        <a href="img/logo/Regional/Asia.zip" download="ASIA-logos.zip">
+        <a href="img/Logo/Regional/Asia.zip" download="ASIA-logos.zip">
         <img class="logo-size" src="img/Logo/Regional/Asia/logo-asia.png" alt="">
     </a>
     </div>
     <div class="filterDiv filterDiv-logo global latam">
-        <a href="img/logo/Regional/LatAm.zip" download="LATAM-logos.zip">
+        <a href="img/Logo/Regional/LatAm.zip" download="LATAM-logos.zip">
         <img class="logo-size" src="img/Logo/Regional/LatAm/logo-latam.png"  alt="">
     </a>
     </div>
         <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Argentina.zip" download="AR-logos.zip">
+        <a href="img/Logo/Argentina.zip" download="AR-logos.zip">
         <img class="logo-size" src="img/Logo/Argentina/logo-argentina.png"  alt="">
     </a>
     </div>
         <div class="filterDiv filterDiv-logo latam">
-      <a href="img/logo/Brazil.zip" download="BR-logos.zip">
+      <a href="img/Logo/Brazil.zip" download="BR-logos.zip">
         <img class="logo-size" src="img/Logo/Brazil/logo-brazil.png"  alt="">
     </a>
     </div>
         <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Chile.zip" download="CL-logos.zip">
+        <a href="img/Logo/Chile.zip" download="CL-logos.zip">
         <img class="logo-size" src="img/Logo/Chile/logo-chile.png" alt="">
     </a>
     </div>
             <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Colombia.zip" download="CO-logos.zip">
+        <a href="img/Logo/Colombia.zip" download="CO-logos.zip">
         <img class="logo-size" src="img/Logo/Colombia/logo-colombia.png"  alt="">
     </a>
     </div>
             <div class="filterDiv filterDiv-logo europe">
-        <a href="img/logo/Germany.zip" download="DE-logos.zip">
+        <a href="img/Logo/Germany.zip" download="DE-logos.zip">
         <img class="logo-size" src="img/Logo/Germany/logo-germany.png"  alt="">
     </a>
     </div>
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/India.zip" download="IN-logos.zip">
+        <a href="img/Logo/India.zip" download="IN-logos.zip">
         <img class="logo-size" src="img/Logo/India/logo-india.png"  alt="">
     </a>
     </div>
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/Indonesia.zip" download="ID-logos.zip">
+        <a href="img/Logo/Indonesia.zip" download="ID-logos.zip">
         <img class="logo-size" src="img/Logo/Indonesia/logo-indonesia.png"  alt="">
     </a>
     </div>
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/Japan.zip" download="JP-logos.zip">
+        <a href="img/Logo/Japan.zip" download="JP-logos.zip">
         <img class="logo-size" src="img/Logo/Japan/logo-japan.png"  alt="">
     </a>
     </div>
             <div class="filterDiv filterDiv-logo latam">
-        <a href="img/logo/Mexico.zip" download="MX-logos.zip">
+        <a href="img/Logo/Mexico.zip" download="MX-logos.zip">
         <img class="logo-size" src="img/Logo/Mexico/logo-mexico.png"  alt="">
     </a>
     </div>
             <div class="filterDiv filterDiv-logo asia">
-        <a href="img/logo/Thailand.zip" download="TH-logos.zip">
+        <a href="img/Logo/Thailand.zip" download="TH-logos.zip">
         <img class="logo-size" src="img/Logo/Thailand/logo-thailand.png"  alt="">
     </a>
     </div>
