adding new icon set

--- a/index.html
+++ b/index.html
@@ -905,6 +905,226 @@ across a multitude of categories.
         <img src="img/Icons/Icon_worldwide.png" style="width:70%" alt="Icon_worldwide">
     </a>
     </div>
+                  <div class="filterDiv campaigns">
+        <a href="img/Icons/bbt.png" download="bbt.png">
+        <img src="img/Icons/bbt.png" style="width:70%" alt="bbt">
+    </a>
+    </div>
+                <div class="filterDiv campaigns components">
+        <a href="img/Icons/censorship.png" download="censorship.png">
+        <img src="img/Icons/censorship.png" style="width:70%" alt="censorship">
+    </a>
+    </div>
+                    <div class="filterDiv campaigns">
+        <a href="img/Icons/climatechange2.png" download="climatechange2.png">
+        <img src="img/Icons/climatechange2.png" style="width:70%" alt="climatechange2">
+    </a>
+    </div>
+                        <div class="filterDiv campaigns">
+        <a href="img/Icons/climatechange3.png" download="climatechange3.png">
+        <img src="img/Icons/climatechange3.png" style="width:70%" alt="climatechange3">
+    </a>
+    </div>
+                            <div class="filterDiv campaigns users">
+        <a href="img/Icons/community1.png" download="community1.png">
+        <img src="img/Icons/community1.png" style="width:70%" alt="community1">
+    </a>
+    </div>
+                                <div class="filterDiv campaigns users">
+        <a href="img/Icons/community2.png" download="community2.png">
+        <img src="img/Icons/community2.png" style="width:70%" alt="community2">
+    </a>
+    </div>
+                                    <div class="filterDiv campaigns users">
+        <a href="img/Icons/community3.png" download="community3.png">
+        <img src="img/Icons/community3.png" style="width:70%" alt="community3">
+    </a>
+    </div>
+                                        <div class="filterDiv components">
+        <a href="img/Icons/dataprivacy.png" download="dataprivacy.png">
+        <img src="img/Icons/dataprivacy.png" style="width:70%" alt="dataprivacy">
+    </a>
+    </div>
+                                        <div class="filterDiv campaigns users">
+        <a href="img/Icons/digitalaction.png" download="digitalaction.png">
+        <img src="img/Icons/digitalaction.png" style="width:70%" alt="digitalaction">
+    </a>
+    </div>   
+                                        <div class="filterDiv campaigns">
+        <a href="img/Icons/dog.png" download="dog.png">
+        <img src="img/Icons/dog.png" style="width:70%" alt="dog">
+    </a>
+    </div>   
+                                        <div class="filterDiv campaigns">
+        <a href="img/Icons/elections.png" download="elections.png">
+        <img src="img/Icons/elections.png" style="width:70%" alt="elections">
+    </a>
+    </div>       
+                                        <div class="filterDiv campaigns">
+        <a href="img/Icons/elephant.png" download="elephant.png">
+        <img src="img/Icons/elephant.png" style="width:70%" alt="elephant">
+    </a>
+    </div>         
+                                         <div class="filterDiv campaigns">
+        <a href="img/Icons/environment1.png" download="environment1.png">
+        <img src="img/Icons/environment1.png" style="width:70%" alt="environment1">
+    </a>
+    </div>           
+                                             <div class="filterDiv campaigns">
+        <a href="img/Icons/environment2.png" download="environment2.png">
+        <img src="img/Icons/environment2.png" style="width:70%" alt="environment2">
+    </a>
+    </div>  
+                                         <div class="filterDiv campaigns">
+        <a href="img/Icons/environment3.png" download="environment3.png">
+        <img src="img/Icons/environment3.png" style="width:70%" alt="environment3">
+    </a>
+    </div>      
+                                          <div class="filterDiv campaigns">
+        <a href="img/Icons/forestfire2.png" download="forestfire2.png">
+        <img src="img/Icons/forestfire2.png" style="width:70%" alt="forestfire2">
+    </a>
+    </div>     
+                                          <div class="filterDiv campaigns users">
+        <a href="img/Icons/handshake1.png" download="handshake1.png">
+        <img src="img/Icons/handshake1.png" style="width:70%" alt="handshake1">
+    </a>
+    </div>        
+                                          <div class="filterDiv campaigns users">
+        <a href="img/Icons/handshake2.png" download="handshake2.png">
+        <img src="img/Icons/handshake2.png" style="width:70%" alt="handshake2">
+    </a>
+    </div>     
+                                              <div class="filterDiv campaigns">
+        <a href="img/Icons/health1.png" download="health1.png">
+        <img src="img/Icons/health1.png" style="width:70%" alt="health1">
+    </a>
+    </div>     
+                                              <div class="filterDiv campaigns">
+        <a href="img/Icons/health2.png" download="health2.png">
+        <img src="img/Icons/health2.png" style="width:70%" alt="health2">
+    </a>
+    </div>  
+                                              <div class="filterDiv campaigns">
+        <a href="img/Icons/homeless.png" download="homeless.png">
+        <img src="img/Icons/homeless.png" style="width:70%" alt="homeless">
+    </a>
+    </div>         
+                                               <div class="filterDiv campaigns components">
+        <a href="img/Icons/lgbtq-color.png" download="lgbtq-color.png">
+        <img src="img/Icons/lgbtq-color.png" style="width:70%" alt="lgbtq-color">
+    </a>
+    </div>        
+                                               <div class="filterDiv campaigns components">
+        <a href="img/Icons/lgbtq.png" download="lgbtq.png">
+        <img src="img/Icons/lgbtq.png" style="width:70%" alt="lgbtq">
+    </a>
+    </div>         
+                                               <div class="filterDiv campaigns">
+        <a href="img/Icons/mentalhealth1.png" download="mentalhealth1.png">
+        <img src="img/Icons/mentalhealth1.png" style="width:70%" alt="mentalhealth1">
+    </a>
+    </div>             
+                                               <div class="filterDiv campaigns">
+        <a href="img/Icons/mentalhealth2.png" download="mentalhealth2.png">
+        <img src="img/Icons/mentalhealth2.png" style="width:70%" alt="mentalhealth2">
+    </a>
+    </div>       
+                                               <div class="filterDiv users components">
+        <a href="img/Icons/mobilephone.png" download="mobilephone.png">
+        <img src="img/Icons/mobilephone.png" style="width:70%" alt="mobilephone">
+    </a>
+    </div>     
+                                               <div class="filterDiv components users">
+        <a href="img/Icons/network.png" download="network.png">
+        <img src="img/Icons/network.png" style="width:70%" alt="network">
+    </a>
+    </div>      
+                                               <div class="filterDiv users components">
+        <a href="img/Icons/onlinepetition.png" download="onlinepetition.png">
+        <img src="img/Icons/onlinepetition.png" style="width:70%" alt="onlinepetition">
+    </a>
+    </div>     
+                                               <div class="filterDiv campaigns users">
+        <a href="img/Icons/pandemic.png" download="pandemic.png">
+        <img src="img/Icons/pandemic.png" style="width:70%" alt="pandemic">
+    </a>
+    </div> 
+                                               <div class="filterDiv components users">
+        <a href="img/Icons/peoplepower.png" download="peoplepower.png">
+        <img src="img/Icons/peoplepower.png" style="width:70%" alt="peoplepower">
+    </a>
+    </div>     
+                                               <div class="filterDiv campaigns users">
+        <a href="img/Icons/petitiondelivery.png" download="petitiondelivery.png">
+        <img src="img/Icons/petitiondelivery.png" style="width:70%" alt="petitiondelivery">
+    </a>
+    </div>       
+                                               <div class="filterDiv campaigns">
+        <a href="img/Icons/pig.png" download="pig.png">
+        <img src="img/Icons/pig.png" style="width:70%" alt="pig">
+    </a>
+    </div>         
+                                               <div class="filterDiv campaigns">
+        <a href="img/Icons/plasticwaste.png" download="plasticwaste.png">
+        <img src="img/Icons/plasticwaste.png" style="width:70%" alt="plasticwaste">
+    </a>
+    </div>    
+                                               <div class="filterDiv users components">
+        <a href="img/Icons/power.png" download="power.png">
+        <img src="img/Icons/power.png" style="width:70%" alt="power">
+    </a>
+    </div>      
+                                               <div class="filterDiv campaigns users">
+        <a href="img/Icons/protest.png" download="protest.png">
+        <img src="img/Icons/protest.png" style="width:70%" alt="protest">
+    </a>
+    </div>      
+                                               <div class="filterDiv components">
+        <a href="img/Icons/report.png" download="report.png">
+        <img src="img/Icons/report.png" style="width:70%" alt="report">
+    </a>
+    </div>    
+                                               <div class="filterDiv campaigns components">
+        <a href="img/Icons/school.png" download="school.png">
+        <img src="img/Icons/school.png" style="width:70%" alt="school">
+    </a>
+    </div>      
+                                               <div class="filterDiv users components">
+        <a href="img/Icons/support.png" download="support.png">
+        <img src="img/Icons/support.png" style="width:70%" alt="support">
+    </a>
+    </div>          
+                                               <div class="filterDiv users">
+        <a href="img/Icons/tideuphands.png" download="tideuphands.png">
+        <img src="img/Icons/tideuphands.png" style="width:70%" alt="tideuphands">
+    </a>
+    </div>      
+                                               <div class="filterDiv components">
+        <a href="img/Icons/virality.png" download="virality.png">
+        <img src="img/Icons/virality.png" style="width:70%" alt="virality">
+    </a>
+    </div>      
+                                               <div class="filterDiv campaigns">
+        <a href="img/Icons/water1.png" download="water1.png">
+        <img src="img/Icons/water1.png" style="width:70%" alt="water1">
+    </a>
+    </div>      
+                                               <div class="filterDiv campaigns">
+        <a href="img/Icons/water2.png" download="water2.png">
+        <img src="img/Icons/water2.png" style="width:70%" alt="water2">
+    </a>
+    </div>          
+                                               <div class="filterDiv campaigns users">
+        <a href="img/Icons/wheelchair.png" download="wheelchair.png">
+        <img src="img/Icons/wheelchair.png" style="width:70%" alt="wheelchair">
+    </a>
+    </div>     
+                                               <div class="filterDiv campaigns users components">
+        <a href="img/Icons/womensrights.png" download="womensrights.png">
+        <img src="img/Icons/womensrights.png" style="width:70%" alt="womensrights">
+    </a>
+    </div>     
 </div>
 
 
